--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -225,10 +225,12 @@
             }
 
             function ReturnView(orderby, desc) {
+                var token = $('input[name="__RequestVerificationToken"]').val();
+
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "AwardFund", "GetSortedAwardFund")',
                     type: 'POST',
-                    data: { orderby: orderby, desc: desc },
+                    data: { orderby: orderby, desc: desc, __RequestVerificationToken: token },
                     success: function (data) {
                         $('#result').empty();
                         document.getElementById('result').innerHTML = DOMPurifyData(data);
