--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
@@ -278,10 +278,12 @@
             }
 
             function ReturnView(selectedId, orderby, desc) {
+                var token = $('input[name="__RequestVerificationToken"]').val();
+
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "eFirstChoice", "GetSortedeFirstChoice")',
                     type: 'POST',
-                    data: { selectedId: selectedId, orderby: orderby, desc: desc },
+                    data: { selectedId: selectedId, orderby: orderby, desc: desc, __RequestVerificationToken: token },
                     success: function (data) {
                         $('#result').empty();
                         document.getElementById('result').innerHTML = DOMPurifyData(data);
