--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -472,7 +472,8 @@
         Subject: '',
         Description: '',
         Type: '1',
-        StatusCode: '0'
+        StatusCode: '0',
+        __RequestVerificationToken: ''
     };
 
     $(function () {
@@ -724,6 +725,10 @@
         $('[data-send]').on('click', function (e) {
             e.preventDefault();
             window.loading('show');
+
+            var token = $('input[name="__RequestVerificationToken"]').val();
+            currentConsultSchedule.__RequestVerificationToken = token;
+
             $.ajax({
                 url: '@ClientRoute.GenerateUrl(this, "Consult", "CreateConsultSchedule")',
                 type: 'POST',
