--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -2021,6 +2021,8 @@
             $('[data-save]').on('click', function (e) {
                 e.preventDefault();
 
+                var token = $('input[name="__RequestVerificationToken"]').val();
+
                 const calculationData = {
                     Type: "EducationFundList",
                     Name: "教育基金試算",
@@ -2031,7 +2033,8 @@
                     EarningsChart: earningsChart,
                     ChartsRevenues: chartsRevenues,
                     ChartsRewards: chartsRewards,
-                    ChartsRewardsCategories: chartsRewardsCategories
+                    ChartsRewardsCategories: chartsRewardsCategories,
+                    __RequestVerificationToken: token
                 };
 
                 $.ajax({
@@ -3382,12 +3385,15 @@
                     expectedRoi = ExpectedRoi;
                 }
 
+                var token = $('input[name="__RequestVerificationToken"]').val();
+
                 $.ajax({
                     url: '@Url.Action("GetFundData", "Calculate")',
                     method: 'POST',
                     data: {
                         ExpectedRoi: expectedRoi,
-                        ProductFundIDs: fundIds
+                        ProductFundIDs: fundIds,
+                        __RequestVerificationToken: token
                     },
                     success: function (data) {
                         if(data != null && data.length != 0) {
