--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
@@ -2126,6 +2126,8 @@
             $('[data-save]').on('click', function (e) {
                 e.preventDefault();
 
+                var token = $('input[name="__RequestVerificationToken"]').val();
+
                 const calculationData = {
                     Type: "RetirementPreparationList",
                     Name: "退休準備試算",
@@ -2136,7 +2138,8 @@
                     EarningsChart: earningsChart,
                     ChartsRevenues: chartsRevenues,
                     ChartsRewards: chartsRewards,
-                    ChartsRewardsCategories: chartsRewardsCategories
+                    ChartsRewardsCategories: chartsRewardsCategories,
+                    __RequestVerificationToken: token
                 };
 
                 $.ajax({
@@ -3593,12 +3596,15 @@
                     expectedRoi = ExpectedRoi;
                 }
 
+                var token = $('input[name="__RequestVerificationToken"]').val();
+
                 $.ajax({
                     url: '@Url.Action("GetFundData", "Calculate")',
                     method: 'POST',
                     data: {
                         ExpectedRoi: expectedRoi,
-                        ProductFundIDs: fundIds
+                        ProductFundIDs: fundIds,
+                        __RequestVerificationToken: token
                     },
                     success: function (data) {
                         if (data != null && data.length != 0) {
