--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -187,13 +187,16 @@
             }
 
             function apiRequest(url, params) {
+
+                let token = {
+                    __RequestVerificationToken: $('input[name="__RequestVerificationToken"]').val()
+                };
+
                 return new Promise((resolve, reject) => {
                     $.ajax({
-                        url,
+                        url: url,
                         type: 'POST',
-                        dataType: 'json',
-                        contentType: 'application/json',
-                        data: params ? JSON.stringify(params) : null,
+                        data: params ? $.extend({}, params, token) : token,
                         success: function (data) {
                             resolve(data);
                         },
