--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -78,13 +78,15 @@
             }
 
             function apiRequest(url, params) {
+                let token = {
+                    __RequestVerificationToken: $('input[name="__RequestVerificationToken"]').val()
+                };
+
                 return new Promise((resolve, reject) => {
                     $.ajax({
                         url,
                         type: 'POST',
-                        dataType: 'json',
-                        contentType: 'application/json',
-                        data: params ? JSON.stringify(params) : null,
+                        data: params ? $.extend({}, params, token) : token,
                         success: function (data) {
                             resolve(data);
                         },
